# botbot

./: .dockerignore  .env.example  .eslintrc.js  .eslintrc.json  .gitignore  DEPLOYMENT.md  DEPLOYMENT_READY.md  Dockerfile  Dockerfile.backup  README.md  RENDER_DEPLOYMENT.md  babel.config.js.bak  docker-compose.yml  jest-output.json  jest.config.js  netlify.toml  next.config.cjs  next.config.js  package-lock.json  package.json  reminders.db  render.yaml  tsconfig.json  vercel.json
ATC/: .gitignore  ARCHITECTURE.md  CHECKLIST.md  COMPLETE_DEMO_GUIDE.md  DASHBOARD_GUIDE.md  DEMO_INSTRUCTIONS.md  ECHO_TOWER_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PATCH.md  IMPLEMENTATION_SUMMARY.md  INSTALL_FIX.md  QUICKSTART.md  QUICK_FIX.md  QUICK_START.md  README.md  README_DEMO.md  ST01_IMPLEMENTATION_COMPLETE.md  START_HERE.md  TASK_7.1_COMPLETION_SUMMARY.md  VERCEL_DEPLOYMENT_COMPLETE.md  VISUALIZATION_COMPLETE.md  VISUALIZATION_PLAN.md  VISUALIZATION_QUICKSTART.md  adapter.patch  fix_demo.py  launch_dashboard.bat  launch_dashboard.py  launch_echo_tower.bat  launch_echo_tower.py  launch_echo_tower_simple.py  launch_integrated_demo.bat  launch_minimal_dashboard.bat  launch_react_dashboard.bat  launch_simple_demo.py  pyproject.toml  requirements.txt  setup_check.py  setup_py311.bat  test_adapter_standalone.py  test_scenario_integration.py  (+3 more)
ATC/.claude/: settings.local.json
ATC/.kiro/steering/: product.md  tech.md
ATC/atc_environment/: echo_tower_alpha01.py  echo_tower_server.py
ATC/bluesky_adapter/: __init__.py  adapter.py
ATC/configs/: ppo_baseline.yaml
ATC/examples/: viz_decorator.py  viz_simple.py  viz_wrapper.py
ATC/st_env/: __init__.py  env.py  reward.py  utils.py
ATC/tests/: __init__.py  test_env_smoke.py  test_error_handling.py  test_integration_smoke.py  test_system_integration.py
ATC/train/: __init__.py  models.py  train_rllib.py  train_rllib_with_events.py
ATC/visualization/: DASHBOARD_INTEGRATION.md  README.md  __init__.py  callbacks.py  integration.py  replay.py  viz_server.py
Caidoon/: .dockerignore  (+23 more)
(+475 files in other folders)
